# gif-forge

./: .gitignore  AGENTS.md  AUTHORS  README.md  pyproject.toml  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  flatpak.yml  release.yml
build-aux/flatpak/: install-data.sh  io.github.elhombretecla.GifForge.yml
data/: io.github.elhombretecla.GifForge.desktop  io.github.elhombretecla.GifForge.gschema.xml  io.github.elhombretecla.GifForge.metainfo.xml
debian/: changelog  control  copyright  gif-forge.install  rules
docs/: DEVELOPMENT.md  PACKAGING.md  USER_GUIDE.md
gifforge/: __init__.py  __main__.py  i18n.py  models.py  recorder.py  utils.py
gifforge/capture/: __init__.py  backend.py  factory.py  portal.py  region.py  x11.py
gifforge/editor/: __init__.py  commands.py  overlays.py  timeline.py
gifforge/encode/: __init__.py  errors.py  ffmpeg.py  frames_export.py  gif_timing.py  gifski.py  pipeline.py  presets.py  runner.py
gifforge/frames/: __init__.py  decode.py  deglitch.py  imageops.py  model.py  overlay_render.py
gifforge/platform/: __init__.py  x11_geometry.py  x11_window.py
gifforge/project/: __init__.py  cache.py  document.py  store.py
gifforge/settings/: __init__.py  config.py
gifforge/ui/: __init__.py  application.py  editor_window.py  export_dialog.py  frame_strip.py  gtk_compat.py  preferences_window.py  preview.py  recorder_window.py
packaging/appimage/: AppImageBuilder.yml  AppRun  build-appimage.sh
packaging/aur/: .SRCINFO  PKGBUILD
packaging/deb/: build-deb.sh
packaging/rpm/: gif-forge.spec
po/: AGENTS.md  LINGUAS  POTFILES.in  de.po  es.po  fr.po  gif-forge.pot  pt.po  update-pot.sh
tests_py/: _e2e_capture.py  _e2e_editor.py  _e2e_export.py  _e2e_project.py  _e2e_ui.py  test_deglitch.py  test_editor.py  test_encode_argv.py  test_frames.py  test_frames_export.py  test_gif_timing.py  test_overlays.py  test_portal.py  test_project.py  test_region_and_x11.py  test_settings.py  test_utils_and_recorder.py
