[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gifforge"
version = "0.1.0"
description = "Modern Linux screen recorder and GIF/video editor"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Juan de la Cruz García", email = "delacruzgarciajuan@gmail.com" }]
# Runtime GTK/Adwaita come from the system (PyGObject); not pip-installable here.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
gif-forge = "gifforge.ui.application:main"

[tool.setuptools.packages.find]
include = ["gifforge*"]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
