[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gifforge"
version = "0.1.1"
description = "Modern Linux screen recorder and GIF/video editor"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Juan de la Cruz García", email = "delacruzgarciajuan@gmail.com" }]
# Runtime GTK/Adwaita come from the system (PyGObject); not pip-installable here.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy"]

[project.scripts]
gif-forge = "gifforge.ui.application:main"

[tool.setuptools.packages.find]
include = ["gifforge*"]

[tool.pytest.ini_options]
testpaths = ["tests_py"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP"]
ignore = [
  "E501",  # long lines: GTK/ffmpeg argv code reads better unwrapped
  "E402",  # gi.require_version() must run before gi.repository imports
  "UP035", "UP006",  # typing.List/Optional style kept for Python 3.10 floor
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
# PyGObject has no usable stubs; keep mypy to obvious wins.
disable_error_code = ["annotation-unchecked"]
